--- a/project.json
+++ b/project.json
@@ -6,7 +6,7 @@
 	"projectName": "PhocaDownloadContentPlugin",
 	"extensionName": "Phoca Download Content Plugin",
 	"projectInitials" : "PD",				  
-	"description": "Phoca Download Content plugin is a Joomla! plugin which displays:\\n- link to Phoca Download categories\\n- link to Phoca Download files\\n- files which can be previewed (e.g. PDF, images)\\n- files which can be played (e.g. MP3, MP4, OGG, OGV)\\n- YouTube videos\\n\\nin article content.",
+	"description": "Phoca Download Content plugin is a Joomla! plugin which displays:\n- link to Phoca Download categories\n- link to Phoca Download files\n- files which can be previewed (e.g. PDF, images)\n- files which can be played (e.g. MP3, MP4, OGG, OGV)\n- YouTube videos\n\n in article content.",
 	"projectUrl": "https://www.phoca.cz/phocadownload-plugin",
 	"projectDocumentationUrl": "https://www.phoca.cz/documentation/category/51-phoca-download-plugin",
 	"projectDemo" : {
