--- a/project.json
+++ b/project.json
@@ -8,6 +8,8 @@
 	"projectInitials" : "PD",				  
 	"description": "Phoca Download Content plugin is a Joomla! plugin which displays:\n- link to Phoca Download categories\n- link to Phoca Download files\n- files which can be previewed (e.g. PDF, images)\n- files which can be played (e.g. MP3, MP4, OGG, OGV)\n- YouTube videos\n\n in article content.",
 	"projectUrl": "https://www.phoca.cz/phocadownload-plugin",
+	"projectMainComponent": "Phoca Download",
+	"projectMainComponentInfoUrl": "https://www.phoca.cz/project/phocadownload-joomla-download",
 	"projectDocumentationUrl": "https://www.phoca.cz/documentation/category/51-phoca-download-plugin",
 	"projectDemo" : {
 		"Joomla! 1.5 Demo": "https://www.phoca.cz/demo/"
